log/build_2026-05-26_20-24-23/sudsakhon_mainprogram/stderr.log
  File "/home/ubuntu/ros2_ws/install/sudsakhon_mainprogram/lib/python3.12/site-packages/sudsakhon_mainprogram/main_controller.py", line 637
    elif self.mission_step == 12.2: 
    ^^^^
SyntaxError: invalid syntax

